# UniversalGPS

./: .gitignore  AUTHORS  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: CMakeLists.txt  Direction.cpp  Direction.h  Image.cpp  Image.h  Index.cpp  Index.h  IndexEighth.cpp  IndexEighth.h  KdTree.h  KdTreeBig.cpp  KdTreeBig.h  Makefile  Orientation.cpp  Orientation.h  Picture.h  Pose.h  ProjectedStar.cpp  ProjectedStar.h  Projection.cpp  Projection.h  Quad.cpp  Quad.h  UGImage.h  UGLibrary.h  UGQuad.h  UGUniverse.h  UGVec2.cpp  UGVec2.h  UGVec3.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  _ug.h  cmake_install.cmake  main.cc
test/: Makefile  cmake_install.cmake
